# misc-files

./: Index-to-my-projects.md  README.md  my-zshrc-file.txt
config/: my-zshrc-file.txt
opensource/: README.md  gsoc-2022.md
problem-solving/PST (problem-solving-training)/: readme.md
problem-solving/PST (problem-solving-training)/cpp/week1.1/: adaAndQueue.cpp  easyQueue.cpp  easyStack.cpp  ferryLoadingVI.cpp
problem-solving/PST (problem-solving-training)/cpp/week1.2/: errorCorrection.cpp  secondOrderStatistics.cpp
problem-solving/cpp/: .gitignore  CMakeLists.txt
problem-solving/cpp/hackerrank/: boxIt.cpp  maxOfAllSubarraysOfSizeK.cpp
problem-solving/cpp/others/hackerrank/: printPretty.cpp  variableSizedArrays.cpp
problem-solving/cpp/pst/done-temp/week1.2/: wordIndex.cpp
problem-solving/cpp/pst/done-temp/week2.1/: averageLength.cpp
problem-solving/cpp/pst/week1.1/: adaAndQueue.cpp  diverseTeam.cpp  easyQueue.cpp  ferryLoadingVI.cpp  streetParade.cpp
problem-solving/cpp/pst/week1.2/: addAll.cpp  chatOrder.cpp  makeThemOdd.cpp  powersOfTwo.cpp  registrationSystem.cpp  wordIndex.cpp
problem-solving/cpp/pst/week2.1/: automateTheGrades.cpp  averageLength.cpp  bitMaskingExample.cpp  lowerBoundSTL.cpp  physicsPractical.cpp  primeMatrix.cpp  queriesAboutLessThanOrEqualElements.cpp  removeSmallest.cpp  twoArraysAndSwaps.cpp  whatIsTheMedian.cpp
problem-solving/cpp/pst/week2.2/: farRelativesProblem.cpp  makingTriangle.cpp  socialConstraints.cpp  theHammingDistanceProblem.cpp  threeDisplays.cpp
problem-solving/cpp/week1.1/: boyOrGirl.cpp  diverseTeam.cpp  pointsInSegments.cpp
problem-solving/exercism/: .gitignore
problem-solving/exercism/go/: accumulate.go  gigasecond.go  space_age.go
problem-solving/hackerrank/cpp/: CMakeLists.txt  Class.cpp  ClassesAndObjects.cpp  shower.cpp  stringstream.cpp
(+58 files in other folders)
